# djangoProject2

./: Dockerfile  docker-compose.yaml  pyproject.toml
djangoProject2/: settings.py  urls.py
